--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
 <img src="download (4).jpg" alt="js-basic" width="300">
 <img src="download (5).jpg" alt="js-basic" width="300">
 <img src="download (6).jpg" alt="js-basic" width="300">
-<img src="download.jpg" alt="js-basics" width="300">
+<img src="download.jpg" alt="js-basics" width="300"bg.jpg       ⛔ (background image)
+GitHub Pages ⛔ (website link)
+>
+        
 <script>console.log('hello')
     alert('welcome to our store')
 </script>
     </body>
+
 </html>
