--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <img src="download (4).jpg" alt="js-basic" width="300">
 <img src="download (5).jpg" alt="js-basic" width="300">
 <img src="download (6).jpg" alt="js-basic" width="300">
-<img src="download.jpg" alt="js-basics" width="300"bg.jpg       ⛔ (background image)
+<img src="download.jpg" alt="js-basics" width="300"js-basic       ⛔ (background image)
 GitHub Pages ⛔ (website link)
 >
         
@@ -28,3 +28,4 @@ GitHub Pages ⛔ (website link)
     </body>
 
 </html>
+
